# GED

./: .gitignore  CMakeLists.txt  README.md  input.c
include/: IPFP.hpp  chemgraph.hpp  costMat.hpp  dataset.hpp  genCost.hpp  init.hpp  input.hpp  lsap.hpp  lsape.h  lsape.hpp  matop.h  matop.hpp  matop.inl  quadratic.hpp  utils.hpp
src/: IPFP.cpp  chemgraph.cpp  costMat.cpp  dataset.cpp  genCost.cpp  init.cpp  input.cpp  lsap.cpp  lsape.cpp  main.cpp  quadratic.cpp  utils.cpp
test/: test_dataset.cpp  test_lsape.cpp
